Library/AXL(Library)/Visual Basic/AXC.bas

'*****************************************************************************
'/****************************************************************************
'*****************************************************************************
'**
'** File Name
'** ----------
'**
'** AXC.BAS
'**
'** COPYRIGHT (c) AJINEXTEK Co., LTD
'**
'*****************************************************************************
'*****************************************************************************
'**
'** Description
'** -----------
'** Ajinextek Counter Library Header File
'** 
'**
'*****************************************************************************
'*****************************************************************************
'**
'** Source Change Indices
'** ---------------------
'** 
'** (None)
'**
'**
'*****************************************************************************
'*****************************************************************************
'**
'** Website
'** ---------------------
'**
'** http://www.ajinextek.com
'**
'*****************************************************************************
'*****************************************************************************
'*/
'

Attribute VB_Name = "AXC"


'========== Board and verification API group of module information
' Verifying If CNT module exists

Public Declare Function AxcInfoIsCNTModule Lib "AXL.dll" (ByRef upStatus As Long) As Long


' Verifying CNT module number
Public Declare Function AxcInfoGetModuleNo Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModulePos As Long, ByRef lpModuleNo As Long) As Long


' Verifying the number of CNT I/O module
Public Declare Function AxcInfoGetModuleCount Lib "AXL.dll" (ByRef lpModuleCount As Long) As Long


' Verifying the Number of counter input channels for specified module
Public Declare Function AxcInfoGetChannelCount Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef lpCount As Long) As Long


' Verifying the total number of channels in system mounted counter.
Public Declare Function AxcInfoGetTotalChannelCount Lib "AXL.dll" (ByRef lpChannelCount As Long) As Long


' Verifying base board number, module position and module ID with specified module number
Public Declare Function AxcInfoGetModule Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef lpBoardNo As Long, ByRef lpModulePos As Long, ByRef upModuleID As Long) As Long


'     Verifying specified module board : Sub ID, module name, module description
'    ======================================================/
'     support product : EtherCAT
'     upModuleSubID   : EtherCAT SubID(for distinguish between EtherCAT modules)
'     szModuleName         : model name of module(50 Bytes)
'     szModuleDescription  : description of module(80 Bytes)
'    ======================================================//
Public Declare Function AxcInfoGetModuleEx Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef upModuleSubID As Long, ByRef szNoduleName As String, ByRef szModuleDescription As String) As Long


'Verifying Module status of specified module board
Public Declare Function AxcInfoGetModuleStatus Lib "AXL.dll" (ByVal lModuleNo As Long) As Long


Public Declare Function AxcInfoGetFirstChannelNoOfModuleNo Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef lpChannelNo As Long) As Long
    Public Declare Function AxcInfoGetModuleNoOfChannelNo Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef lpModuleNo As Long) As Long


'   Setting encoder input method of counter module
'   dwMethod --> 0x00 : Sign and pulse, x1 multiplication
'   dwMethod --> 0x01 : Phase-A and phase-B pulses, x1 multiplication
'   dwMethod --> 0x02 : Phase-A and phase-B pulses, x2 multiplication
'   dwMethod --> 0x03 : Phase-A and phase-B pulses, x4 multiplication
'   dwMethod --> 0x08 : Sign and pulse, x2 multiplication
'   dwMethod --> 0x09 : Increment and decrement pulses, x1 multiplication
'   dwMethod --> 0x0A : Increment and decrement pulses, x2 multiplication
'   SIO-CN2CH/HPC4
'   dwMethod --> 0x00 : Up/Down method, A phase : pulse, B phase : direction
'   dwMethod --> 0x01 : Phase-A and phase-B pulses, x1 multiplication
'   dwMethod --> 0x02 : Phase-A and phase-B pulses, x2 multiplication
'   dwMethod --> 0x03 : Phase-A and phase-B pulses, x4 multiplication
Public Declare Function AxcSignalSetEncInputMethod Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwMethod As Long) As Long


' Verifying encoder input method of counter module
' *dwpUpMethod --> 0x00 : Sign and pulse, x1 multiplication
' *dwpUpMethod --> 0x01 : Phase-A and phase-B pulses, x1 multiplication
' *dwpUpMethod --> 0x02 : Phase-A and phase-B pulses, x2 multiplication
' *dwpUpMethod --> 0x03 : Phase-A and phase-B pulses, x4 multiplication
' *dwpUpMethod --> 0x08 : Sign and pulse, x2 multiplication
' *dwpUpMethod --> 0x09 : Increment and decrement pulses, x1 multiplication
' *dwpUpMethod --> 0x0A : Increment and decrement pulses, x2 multiplication
' SIO-CN2CH/HPC4
' dwMethod --> 0x00 : Up/Down method, A phase : pulse, B phase : direction
' dwMethod --> 0x01 : Phase-A and phase-B pulses, x1 multiplication
' dwMethod --> 0x02 : Phase-A and phase-B pulses, x2 multiplication
' dwMethod --> 0x03 : Phase-A and phase-B pulses, x4 multiplication
Public Declare Function AxcSignalGetEncInputMethod Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dwpUpMethod As Long) As Long


' Setting trigger of counter module
' dwMode -->  0x00 : Latch
' dwMode -->  0x01 : State
' dwMode -->  0x02 : Special State    --> SIO-CN2CH only
' SIO-CN2CH
' dwMode -->  0x00 : absolute position trigger or period position trigger.
' caution : Each product has different functions. So, it need to use distinctively.
' dwMode -->  0x01 : Time period trigger(Set to AxcTriggerSetFreq)
' In the case of SIO-HPC4
' dwMode -->  0x00 : absolute mode[with ram data].
' dwMode -->  0x01 : timer mode.
' dwMode -->  0x02 : absolute mode[with fifo].
' dwMode -->  0x03 : periodic mode.[Default]
Public Declare Function AxcTriggerSetFunction Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwMode As Long) As Long


' Verifying trigger setting of counter module
' *dwMode -->  0x00 : Latch
' *dwMode -->  0x01 : State
' *dwMode -->  0x02 : Special State
' dwMode -->  0x00 : absolute position trigger or period position trigger.
' caution : Each product has different functions. So, it need to use distinctively.
' dwMode -->  0x01 : Time period trigger(Set to AxcTriggerSetFreq)
' In the case of SIO-HPC4
' dwMode -->  0x00 : absolute mode[with ram data].
' dwMode -->  0x01 : timer mode.
' dwMode -->  0x02 : absolute mode[with fifo].
' dwMode -->  0x03 : periodic mode.[Default]
Public Declare Function AxcTriggerGetFunction Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dwpMode As Long) As Long


' dwUsage --> 0x00 : Trigger Not use
' dwUsage --> 0x01 : Trigger use
Public Declare Function AxcTriggerSetNotchEnable Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwUsage As Long) As Long


' *dwUsage --> 0x00 : Trigger Not use
' *dwUsage --> 0x01 : Trigger use
Public Declare Function AxcTriggerGetNotchEnable Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dwpUsage As Long) As Long




' Setting capture polarity of counter module.(External latch input polarity)
' dwCapturePol --> 0x00 : Signal OFF -> ON
' dwCapturePol --> 0x01 : Signal ON -> OFF
Public Declare Function AxcSignalSetCaptureFunction Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwCapturePol As Long) As Long


' Verifying capture polarity setting of counter module.(External latch input polarity)
' *dwCapturePol --> 0x00 : Signal OFF -> ON
' *dwCapturePol --> 0x01 : Signal ON -> OFF
Public Declare Function AxcSignalGetCaptureFunction Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dwpCapturePol As Long) As Long


' Verifying capture position of counter module.(External latch)
' *dbpCapturePos --> Location of Capture position
Public Declare Function AxcSignalGetCapturePos Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dbpCapturePos As Double) As Long


' Verifying counter value of counter module.
' *dbpActPos --> Counter value
Public Declare Function AxcStatusGetActPos Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dbpActPos As Double) As Long


' Setting counter value to dbActPos of counter module.
Public Declare Function AxcStatusSetActPos Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dbActPos As Double) As Long


' Setting trigger position of counter module.
' Trigger position of counter module can be set up to two.
Public Declare Function AxcTriggerSetNotchPos Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dbLowerPos As Double, ByVal dbUpperPos As Double) As Long


' Verifying trigger position of counter module.
Public Declare Function AxcTriggerGetNotchPos Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dbpLowerPos As Double, ByRef dbpUpperPos As Double) As Long


' Forced trigger output of counter module.
' dwOutVal --> 0x00 : Trigger output '0'
' dwOutVal --> 0x01 : Trigger output '1'
Public Declare Function AxcTriggerSetOutput Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwOutVal As Long) As Long


' Verifying status of counter module.
' Bit '0' : Carry (Only 1scan turns 'ON' When current counter value is changed to '0' over the upper limit by additional pulse)
' Bit '1' : Borrow (Only 1scan turns 'ON' When current counter value is changed to lower limit under the '0' by subtraction pulse)
' Bit '2' : Trigger output status
' Bit '3' : Latch input status
Public Declare Function AxcStatusGetChannel Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dwpChannelStatus As Long) As Long




' API for SIO-CN2CH only
'
' Setting position unit of counter module
' ex) If you need 1000pulse for move 1mm distance, Setting like -> dMoveUnitPerPulse = 0.001
'     And then, setting location-related values of all functions to 'mm' unit.
Public Declare Function AxcMotSetMoveUnitPerPulse Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dMoveUnitPerPulse As Double) As Long


' Verifying position unit of counter module.
Public Declare Function AxcMotGetMoveUnitPerPulse Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dpMoveUnitPerPuls As Double) As Long


' Setting inversion function of encoder input counter of counter module.
' dwReverse --> 0x00 : No reversal.
' dwReverse --> 0x01 : Reversal.
Public Declare Function AxcSignalSetEncReverse Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwReverse As Long) As Long


' Returns whether the function of inverting the encoder input counter of the counter module is set.
Public Declare Function AxcSignalGetEncReverse Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dwpReverse As Long) As Long


' Selecting encoder input signal of counter module.
' dwSource -->  0x00 : 2(A/B)-Phase signal.
' dwSource -->  0x01 : Z-Phase signal.(No directionality.)
Public Declare Function AxcSignalSetEncSource Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwSource As Long) As Long


' Verifying encoder input signal selection setting of counter module.
Public Declare Function AxcSignalGetEncSource Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dwpSource As Long) As Long


' Setting lower limit value of trigger output range of counter module.
' Setting lower limit value of range to generate trigger output with position period.(In the case of position period trigger product)
' Setting standard position application of trigger information of start address of ram.(In the case of absolute location product)
' Unit : Set by 'AxcMotSetMoveUnitPerPulse'.
' Note : Lower limit value should be set smaller than upper limit value.
Public Declare Function AxcTriggerSetBlockLowerPos Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dLowerPosition As Double) As Long


' Verifying lower limit value of trigger output range of counter module.
Public Declare Function AxcTriggerGetBlockLowerPos Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dpLowerPosition As Double) As Long

